<resources>
    <string name="app_name">Weather</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_location_text">Location</string>
    <string name="menu_one_day_text">One Day</string>
    <string name="menu_five_days_text">Five Days</string>

    <string name="text_pressure">Pressure</string>
    <string name="text_wind">Wind</string>
    <string name="text_sunrise">Sunrise</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_visibility">Visibility</string>
    <string name="text_sunset">Sunset</string>
    <string name="text_cities">Select one of the cities for more weather information.</string>

    <string name="location_not_granted">We need your current location for the app to function properly.</string>
    <string name="c">°C</string>
    <string name="city_weather_detail">cityWeatherDetail</string>
    <string name="weather">WEATHER</string>
    <string name="humidity">HUMIDITY</string>
    <string name="feels">FEELS</string>
    <string name="percent">%</string>
    <string name="pressure">PRESSURE</string>
    <string name="wind">WIND</string>
    <string name="kmh">KmH</string>
    <string name="degree">°</string>

    <string-array name="city_name">
        <item>Lisbon</item>
        <item>Madrid</item>
        <item>Paris</item>
        <item>Berlin</item>
        <item>Copenhagen</item>
        <item>Rome</item>
        <item>London</item>
        <item>Dublin</item>
        <item>Prague</item>
        <item>Viana</item>
    </string-array>

    <integer-array name="city_background">
        <item>@drawable/lisbon</item>
        <item>@drawable/madrid</item>
        <item>@drawable/paris</item>
        <item>@drawable/berlin</item>
        <item>@drawable/copenhagen</item>
        <item>@drawable/rome</item>
        <item>@drawable/london</item>
        <item>@drawable/dublin</item>
        <item>@drawable/prague</item>
        <item>@drawable/viana</item>
    </integer-array>
    <string name="title_activity_city_weather_details">CityWeatherDetailsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
