<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forecast"
            type="com.velaphi.weather.model.ForecastResponse.Forecast" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_margin"
        android:background="@drawable/underline_item_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_forecast_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_forecast_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/weather"
                android:textStyle="bold"
                android:fontFamily="@font/yanone"
                app:layout_constraintEnd_toStartOf="@+id/tvForecastFeels"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgage_forecast_item"
                android:layout_width="@dimen/large_margin2"
                android:layout_height="@dimen/large_margin2"
                android:layout_marginTop="@dimen/small_margin"
                imageResource="@{forecast.weather.get(0).icon}"
                app:layout_constraintEnd_toEndOf="@+id/textView_forecast_state"
                app:layout_constraintStart_toStartOf="@+id/textView_forecast_state"
                app:layout_constraintTop_toBottomOf="@+id/textView_forecast_state" />

            <TextView
                android:id="@+id/textView_forecast_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imgage_forecast_item"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/imgage_forecast_item"
                app:layout_constraintTop_toBottomOf="@+id/imgage_forecast_item" />


            <TextView
                android:id="@+id/textView_celcius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textStyle="bold"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toEndOf="@+id/textView_forecast_temperature"
                app:layout_constraintTop_toTopOf="@+id/textView_forecast_temperature" />

            <TextView
                android:id="@+id/tvForecastFeels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/feels"
                android:textStyle="bold"
                android:fontFamily="@font/yanone"
                app:layout_constraintEnd_toStartOf="@+id/text_forecast_humidity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView_forecast_state"
                app:layout_constraintTop_toTopOf="@+id/textView_forecast_state" />

            <ImageView
                android:id="@+id/imgageView_forecast_feels"
                android:layout_width="@dimen/large_margin2"
                android:layout_height="@dimen/large_margin2"
                android:layout_marginTop="@dimen/small_margin"
                android:src="@drawable/ic_temperature"
                app:layout_constraintEnd_toEndOf="@+id/tvForecastFeels"
                app:layout_constraintStart_toStartOf="@+id/tvForecastFeels"
                app:layout_constraintTop_toBottomOf="@+id/tvForecastFeels" />

            <TextView
                android:id="@+id/textView_forecast_feels_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textView_forecast_temperature"
                app:layout_constraintEnd_toEndOf="@+id/imgageView_forecast_feels"
                app:layout_constraintStart_toStartOf="@+id/imgageView_forecast_feels"
                app:layout_constraintTop_toBottomOf="@+id/imgageView_forecast_feels" />

            <TextView
                android:id="@+id/tv_feels_celcius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textStyle="bold"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toEndOf="@+id/textView_forecast_feels_temperature"
                app:layout_constraintTop_toTopOf="@+id/textView_forecast_feels_temperature" />

            <TextView
                android:id="@+id/text_forecast_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_margin"
                android:textStyle="bold"
                android:text="@string/humidity"
                android:fontFamily="@font/yanone"
                app:layout_constraintEnd_toStartOf="@+id/textForecastPressure"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvForecastFeels"
                app:layout_constraintTop_toTopOf="@+id/tvForecastFeels" />

            <ImageView
                android:id="@+id/imgageView_forecast_humidty"
                android:layout_width="@dimen/large_margin2"
                android:layout_height="@dimen/large_margin2"
                android:src="@drawable/ic_humidity"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/text_forecast_humidity"
                app:layout_constraintStart_toStartOf="@+id/text_forecast_humidity"
                app:layout_constraintTop_toBottomOf="@+id/text_forecast_humidity" />

            <TextView
                android:id="@+id/textView_forecast_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(forecast.main.humidity)}"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textView_forecast_feels_temperature"
                app:layout_constraintEnd_toEndOf="@+id/imgageView_forecast_humidty"
                app:layout_constraintStart_toStartOf="@+id/imgageView_forecast_humidty"
                app:layout_constraintTop_toBottomOf="@+id/imgageView_forecast_humidty" />

            <TextView
                android:id="@+id/tvPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textStyle="bold"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toEndOf="@+id/textView_forecast_humidity"
                app:layout_constraintTop_toTopOf="@+id/textView_forecast_humidity" />

            <TextView
                android:id="@+id/textForecastPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/pressure"
                android:textStyle="bold"
                android:fontFamily="@font/yanone"
                app:layout_constraintEnd_toStartOf="@+id/textForecastWind"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_forecast_humidity"
                app:layout_constraintTop_toTopOf="@+id/text_forecast_humidity" />

            <ImageView
                android:id="@+id/imgForecastPressure"
                android:layout_width="@dimen/large_margin2"
                android:layout_height="@dimen/large_margin2"
                android:src="@drawable/ic_pressure"
                android:layout_marginTop="@dimen/half_margin"
                app:layout_constraintEnd_toEndOf="@+id/textForecastPressure"
                app:layout_constraintStart_toStartOf="@+id/textForecastPressure"
                app:layout_constraintTop_toBottomOf="@+id/textForecastPressure" />

            <TextView
                android:id="@+id/textView_forecast_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(forecast.main.pressure)}"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textView_forecast_humidity"
                app:layout_constraintEnd_toEndOf="@+id/imgForecastPressure"
                app:layout_constraintStart_toStartOf="@+id/imgForecastPressure"
                app:layout_constraintTop_toBottomOf="@+id/imgForecastPressure" />

            <TextView
                android:id="@+id/textForecastWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/wind"
                android:fontFamily="@font/yanone"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textForecastPressure"
                app:layout_constraintTop_toTopOf="@+id/textForecastPressure" />

            <ImageView
                android:id="@+id/imageView_forecast_wind"
                android:layout_width="@dimen/large_margin2"
                android:layout_height="@dimen/large_margin2"
                android:src="@drawable/ic_wind"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/textForecastWind"
                app:layout_constraintStart_toStartOf="@+id/textForecastWind"
                app:layout_constraintTop_toBottomOf="@+id/textForecastWind" />

            <TextView
                android:id="@+id/textView_forecast_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(Math.round(forecast.wind.speed))}"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textView_forecast_pressure"
                app:layout_constraintEnd_toEndOf="@+id/imageView_forecast_wind"
                app:layout_constraintStart_toStartOf="@+id/imageView_forecast_wind"
                app:layout_constraintTop_toBottomOf="@+id/imageView_forecast_wind" />

            <TextView
                android:id="@+id/textView_kmh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmh"
                android:textStyle="bold"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toEndOf="@+id/textView_forecast_wind"
                app:layout_constraintTop_toTopOf="@+id/textView_forecast_wind" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>