<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="locationGPS"
            type="com.velaphi.weather.model.WeatherResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LocationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lytLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layoutBackgroundImage="@{locationGPS.weather.get(0).icon}">

        <View
            android:id="@+id/location_backgroundView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/large_margin"
            app:layout_constraintBottom_toTopOf="@+id/crdView_pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdView_pressure"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_card_width"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginBottom="@dimen/half_margin"
            app:cardCornerRadius="@dimen/medium_margin"
            app:layout_constraintBottom_toTopOf="@+id/cardView_humidity"
            app:layout_constraintEnd_toStartOf="@+id/crdWind"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pressure" />

                <TextView
                    android:id="@+id/textView_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@{String.valueOf(locationGPS.main.pressure)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pressure" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdWind"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_card_width"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            app:cardCornerRadius="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="@+id/crdView_pressure"
            app:layout_constraintEnd_toStartOf="@+id/crdSunrise"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/crdView_pressure"
            app:layout_constraintTop_toTopOf="@+id/crdView_pressure">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind" />

                <TextView
                    android:id="@+id/textView_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@{String.valueOf(locationGPS.wind.speed)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wind" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdSunrise"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_card_width"
            android:layout_marginEnd="@dimen/half_margin"
            app:cardCornerRadius="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="@+id/crdWind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/crdWind"
            app:layout_constraintTop_toTopOf="@+id/crdWind">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sunrise" />

                <TextView
                    android:id="@+id/textView_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="8:25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sunrise" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_humidity"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_card_width"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginBottom="@dimen/last_margin"
            app:cardCornerRadius="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView_visibility"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/textView_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@{String.valueOf(locationGPS.main.humidity)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_humidity" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_visibility"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_humidity"
            app:layout_constraintEnd_toStartOf="@+id/cardView_Sunset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView_humidity"
            app:layout_constraintTop_toTopOf="@+id/cardView_humidity"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility" />

                <TextView
                    android:id="@+id/textView_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@{String.valueOf(locationGPS.visibility)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_visibility" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_Sunset"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_card_width"
            android:layout_marginEnd="@dimen/half_margin"
            app:cardCornerRadius="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_visibility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView_visibility"
            app:layout_constraintTop_toTopOf="@+id/cardView_visibility"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sunset" />

                <TextView
                    android:id="@+id/textView__sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="19:10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sunset" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large_title"
            app:layout_constraintBottom_toTopOf="@+id/textView_state"
            app:layout_constraintEnd_toEndOf="@+id/crdView_pressure"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="@+id/crdView_pressure" />

        <TextView
            android:id="@+id/celcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="@dimen/text_medium_subtitle"
            app:layout_constraintStart_toEndOf="@+id/textView_temperature"
            app:layout_constraintTop_toTopOf="@+id/textView_temperature" />

        <TextView
            android:id="@+id/textView_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/double_margin"
            android:text="@{locationGPS.weather.get(0).description}"
            android:textSize="@dimen/text_subtitle2"
            app:layout_constraintBottom_toTopOf="@+id/crdView_pressure"
            app:layout_constraintEnd_toEndOf="@+id/textView_temperature"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="@+id/textView_temperature" />

        <ImageView
            android:id="@+id/image_state"
            android:layout_width="@dimen/image_state_size"
            android:layout_height="@dimen/image_state_size"
            app:layout_constraintBottom_toBottomOf="@+id/textView_temperature"
            app:layout_constraintEnd_toEndOf="@+id/crdSunrise"
            app:layout_constraintStart_toStartOf="@+id/crdSunrise" />

        <TextView
            android:id="@+id/textView_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:textSize="@dimen/text_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{locationGPS.name}"
            android:textSize="@dimen/text_title"
            app:layout_constraintEnd_toEndOf="@+id/textView_Date"
            app:layout_constraintStart_toStartOf="@+id/textView_Date"
            app:layout_constraintTop_toBottomOf="@+id/textView_Date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/location_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>